code25_all/scala/5997553.txt
scala> println(1, 2)
(1,2)

scala> val t = (1, 2)
t: (Int, Int) = (1,2)

scala> println t
<console>:6: error: value t is not a member of Unit
       println t
           ^

